# features/siswa/create/request.go
@@ -1,8 +1,9 @@
 package create
 
 type CreateSiswaRequest struct {
-	NIS     string `json:"nis"`
-	Nama    string `json:"nama"`
-	Kelas   string `json:"kelas"`
-	Jurusan string `json:"jurusan"`
+	NIS      string `json:"nis"`
+	Nama     string `json:"nama"`
+	Kelas    string `json:"kelas"`
+	Jurusan  string `json:"jurusan"`
+	Angkatan string `json:"angkatan"`
 }
