# features/siswa/create/response.go
@@ -1,11 +1,12 @@
 package create
 
 type CreateSiswaResponse struct {
-	SiswaID string `json:"siswa_id"`
-	NIS     string `json:"nis"`
-	Nama    string `json:"nama"`
-	Kelas   string `json:"kelas"`
-	Jurusan string `json:"jurusan"`
+	SiswaID  string `json:"siswa_id"`
+	NIS      string `json:"nis"`
+	Nama     string `json:"nama"`
+	Kelas    string `json:"kelas"`
+	Jurusan  string `json:"jurusan"`
+	Angkatan string `json:"angkatan"`
 }
 
 type CreateSiswaResponseWrapper struct {
